--- a/advice.adoc
+++ b/advice.adoc
@@ -2,6 +2,9 @@
 // batchspell: add RFI Reddit topbot PVA TPU TPE bioplastics
 // batchspell: add makerspace STL STLs fixups
 
+These are things I had to learn the hard way because YouTube videos
+and online tutorials miss them.
+
 == Build-time advice
 
 Some advice in the link:setup.html[SV08 setup guide] generalizes to
