--- a/README.adoc
+++ b/README.adoc
@@ -19,7 +19,7 @@ modifications by people who aren't me.
 
 * link:customizations.adoc[Tuning and Customizations]
 
-* link:advice.html[Actionable Advice]
+* link:advice.adoc[Actionable Advice]
 
 Much of the material in the set-up guide is generic to all Klipper
 printers, but not all of it. The Actionable Advice is generic.
